--- a/mystyle.css
+++ b/mystyle.css
@@ -21,6 +21,7 @@ nav.navbar-default {
     padding-right: 0px;
     margin-bottom: 0px;
     background-color: rgb(229, 235, 241);
+    box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
 }
 
 #li-navbar {
